@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-16T02:27:57Z",
-  "count" : 2,
+  "timestamp" : "2022-09-16T16:29:52Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -1, +3 ],
+  "count_decinc" : [ -2, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
