@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-09-16T08:27:03Z",
+  "timestamp" : "2022-09-16T16:29:52Z",
   "count_outdated" : 132,
   "uniques_outdated" : 28,
   "count" : 151,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-09-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
