@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-09-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
